Falco/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: falco-ingress
  namespace: falco
spec:
  ingressClassName: nginx
  rules:
    - host: falco.devops-tool.com
      http:
        paths:
          - backend:
              service:
                name: falco-falcosidekick-ui
                port:
                  number: 2802
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - falco.devops-tool.com
      secretName: falco-ingress-tls
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: falco-cert-refresher
  namespace: falco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-refresher
  template:
    metadata:
      labels:
        app: cert-refresher
    spec:
      serviceAccountName: falco-sa
      containers:
        - name: refresher
          image: busybox
          command: ["sleep", "3600"]
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "falco-cert-kv"
